Update Adoption of Deep Neural Network for Civil Engineering problem.ipynb

--- a/Adoption of Deep Neural Network for Civil Engineering problem.ipynb
+++ b/Adoption of Deep Neural Network for Civil Engineering problem.ipynb
@@ -6,7 +6,7 @@
         "id": "iq4HK0pjbRI0"
       },
       "source": [
-        "<h2>Two Input Networks Using Categorical Embeddings, Shared Layers, & Merge Layers\n",
+        "<h2>Adoption of Deep Neural Network for Civil Engineering problem\n",
         "</h2>"
       ]
     },
